[gd_scene load_steps=18 format=3 uid="uid://c2xxw67sodjgd"]

[ext_resource type="FontFile" uid="uid://b75ogjglew3fx" path="res://assets/ui/fonts/ThaleahFat/ThaleahFat.ttf" id="1_0vh43"]
[ext_resource type="Theme" uid="uid://dmvblj4biu2l0" path="res://scenes/ui/theme.tres" id="1_1k3wi"]
[ext_resource type="FontFile" uid="uid://drs8psaldvepg" path="res://assets/ui/fonts/Monogram/monogram.ttf" id="1_3hhku"]
[ext_resource type="Script" uid="uid://jhumqrrcn1pr" path="res://scenes/ui/options/options.gd" id="1_un27u"]
[ext_resource type="Texture2D" uid="uid://cco766ycpedyd" path="res://assets/ui/select_arrow.png" id="2_7u8vf"]
[ext_resource type="Texture2D" uid="uid://dwnmy4eh2r1g6" path="res://assets/ui/radio_checked_icon.png" id="2_gmey6"]
[ext_resource type="Shader" uid="uid://bdwg0qiq74ywp" path="res://scenes/ui/move_down.gdshader" id="3_80uhc"]
[ext_resource type="Texture2D" uid="uid://l8xaf0cnl5ny" path="res://assets/ui/radio_unchecked_icon.png" id="3_gmey6"]
[ext_resource type="Texture2D" uid="uid://435p2elepe43" path="res://assets/ui/spr_title_background.png" id="4_dyaj2"]
[ext_resource type="FontFile" uid="uid://c2oui1amqd6jm" path="res://assets/ui/fonts/ari_w9500/ari-w9500-bold.ttf" id="7_80uhc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7kxxk"]
shader = ExtResource("3_80uhc")
shader_parameter/scroll_speed = Vector2(0, -10)

[sub_resource type="LabelSettings" id="LabelSettings_un27u"]
font = ExtResource("1_0vh43")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_upcpd"]
font = ExtResource("1_3hhku")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7kxxk"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0.078431375, 0.09411765, 0.15686275, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_upcpd"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0.129412, 0.156863, 0.219608, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8784314, 0.84705883, 0.7647059, 1)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="Theme" id="Theme_3hhku"]
Label/font_sizes/font_size = 11
Label/fonts/font = ExtResource("7_80uhc")
PopupMenu/colors/font_color = Color(0.875, 0.875, 0.875, 1)
PopupMenu/font_sizes/font_size = 11
PopupMenu/fonts/font = ExtResource("7_80uhc")
PopupMenu/fonts/title_font = null
PopupMenu/icons/radio_checked = ExtResource("2_gmey6")
PopupMenu/icons/radio_unchecked = ExtResource("3_gmey6")
PopupMenu/styles/hover = SubResource("StyleBoxFlat_7kxxk")
PopupMenu/styles/panel = SubResource("StyleBoxFlat_upcpd")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dyaj2"]
bg_color = Color(0.8784314, 0.84705883, 0.7647059, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.47843137, 0.13333334, 0.12941177, 1)

[node name="Options" type="Control" groups=["Main"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1k3wi")
script = ExtResource("1_un27u")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_7kxxk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_dyaj2")
expand_mode = 1
stretch_mode = 1

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Layout"]
layout_mode = 2
text = "Options"
label_settings = SubResource("LabelSettings_un27u")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Layout"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="Menu" type="VBoxContainer" parent="Layout/MarginContainer"]
custom_minimum_size = Vector2(270, 120)
layout_mode = 2
alignment = 1

[node name="Resolution" type="HBoxContainer" parent="Layout/MarginContainer/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="Layout/MarginContainer/Menu/Resolution"]
layout_mode = 2
size_flags_horizontal = 3
text = "RESOLUTION"
label_settings = SubResource("LabelSettings_upcpd")

[node name="OptionButton" type="OptionButton" parent="Layout/MarginContainer/Menu/Resolution"]
layout_mode = 2
theme = SubResource("Theme_3hhku")
theme_override_colors/font_color = Color(0.47843137, 0.13333334, 0.12941177, 1)
theme_override_colors/font_focus_color = Color(0.47843137, 0.13333334, 0.12941177, 1)
theme_override_colors/font_pressed_color = Color(0.47843137, 0.13333334, 0.12941177, 1)
theme_override_colors/font_hover_color = Color(0.47843137, 0.13333334, 0.12941177, 1)
theme_override_fonts/font = ExtResource("7_80uhc")
theme_override_font_sizes/font_size = 9
theme_override_styles/normal = SubResource("StyleBoxFlat_dyaj2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dyaj2")
theme_override_styles/hover = SubResource("StyleBoxFlat_dyaj2")
theme_override_styles/focus = SubResource("StyleBoxFlat_dyaj2")
theme_override_icons/arrow = ExtResource("2_7u8vf")
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "320x180"
popup/item_0/id = 0
popup/item_1/text = "320x240"
popup/item_1/id = 1

[node name="MusicVolume" type="HBoxContainer" parent="Layout/MarginContainer/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="Layout/MarginContainer/Menu/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "MUSIC"
label_settings = SubResource("LabelSettings_upcpd")

[node name="MusicSlider" type="HSlider" parent="Layout/MarginContainer/Menu/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.1

[node name="EffectVolume" type="HBoxContainer" parent="Layout/MarginContainer/Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="Layout/MarginContainer/Menu/EffectVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "EFFECT"
label_settings = SubResource("LabelSettings_upcpd")

[node name="EffectSlider" type="HSlider" parent="Layout/MarginContainer/Menu/EffectVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.1

[node name="Buttons" type="HBoxContainer" parent="Layout"]
layout_mode = 2
alignment = 1

[node name="Save" type="Button" parent="Layout/Buttons"]
layout_mode = 2
text = " Save "

[connection signal="value_changed" from="Layout/MarginContainer/Menu/MusicVolume/MusicSlider" to="." method="change_volume" binds= ["music"]]
[connection signal="value_changed" from="Layout/MarginContainer/Menu/EffectVolume/EffectSlider" to="." method="change_volume" binds= ["effect"]]
[connection signal="pressed" from="Layout/Buttons/Save" to="." method="_on_save_pressed"]
